--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -24,8 +24,8 @@ dependence {
 }
 
 slick.db {
-  url = "jdbc:postgresql://10.1.29.248:5432/theia"
-  user = "theia"
+  url = "jdbc:h2:file:/Users/wang/IdeaProjects/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
+  user = "noron"
   password = "1qaz@WSX"
   maximumPoolSize = 3
   connectTimeout = 30000
