录音文件转换为文字

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -17,6 +17,9 @@ app {
     secureKeys = [""]
   }
 
+  baiduAptoken = "24.170224094d338b44bf950f620cbc3e03.2592000.1593418247.282335-20097376"
+
+
 }
 
 dependence {
