--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ backend/data
 frontend/target
 shared/target
 shared/.js/target
+shared/.js/.js-shared
 shared/.jvm/target
 # Created by .ignore support plugin (hsz.mobi)
 */.DS_Store
