--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -27,7 +27,8 @@ dependence {
 }
 
 slick.db {
-  url = "jdbc:h2:file:/Users/wang/IdeaProjects/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
+//  url = "jdbc:h2:file:/Users/wang/IdeaProjects/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
+  url = "jdbc:h2:tcp://localhost//D:/GraduateWorks/Google-NCGW/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
   user = "noron"
   password = "1qaz@WSX"
   maximumPoolSize = 3
