--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -17,7 +17,7 @@ app {
     secureKeys = [""]
   }
 
-  baiduAptoken = "24.170224094d338b44bf950f620cbc3e03.2592000.1593418247.282335-20097376"
+  baiduAptoken = "24.ca50bece0b86124460a0b3a433c9083f.2592000.1596355291.282335-20097376"
 
 
 }
@@ -28,8 +28,10 @@ dependence {
 
 slick.db {
 //  url = "jdbc:h2:file:/Users/wang/IdeaProjects/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
-  url = "jdbc:h2:tcp://localhost//D:/GraduateWorks/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
+ // url = "jdbc:h2:tcp://localhost//D:/GraduateWorks/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
 // url = "jdbc:h2:file:/Users/chenzhishuai/IdeaProjects/noron/data/noron"
+   url = "jdbc:h2:file:/Users/gaohan/Downloads/work/noron/data/noron"
+
   user = "noron"
   password = "1qaz@WSX"
   maximumPoolSize = 3
