--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -28,9 +28,9 @@ dependence {
 
 slick.db {
 //  url = "jdbc:h2:file:/Users/wang/IdeaProjects/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
- // url = "jdbc:h2:tcp://localhost//D:/GraduateWorks/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
+  url = "jdbc:h2:tcp://localhost//D:/GraduateWorks/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
 // url = "jdbc:h2:file:/Users/chenzhishuai/IdeaProjects/noron/data/noron"
-   url = "jdbc:h2:file:/Users/gaohan/Downloads/work/noron/data/noron"
+//   url = "jdbc:h2:file:/Users/gaohan/Downloads/work/noron/data/noron"
 
   user = "noron"
   password = "1qaz@WSX"
