--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -27,8 +27,8 @@ dependence {
 }
 
 slick.db {
-//  url = "jdbc:h2:file:/Users/wang/IdeaProjects/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
-  url = "jdbc:h2:tcp://localhost//D:/GraduateWorks/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
+  url = "jdbc:h2:file:/Users/wang/IdeaProjects/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
+//  url = "jdbc:h2:tcp://localhost//D:/GraduateWorks/noron/data/noron" //本地测试时尽量修改为本机h2文件地址
 // url = "jdbc:h2:file:/Users/chenzhishuai/IdeaProjects/noron/data/noron"
 //   url = "jdbc:h2:file:/Users/gaohan/Downloads/work/noron/data/noron"
 
